--- a/style.css
+++ b/style.css
@@ -15,11 +15,9 @@ right: 0px;
 width: 750px;
 display: grid;
 grid-gap: 2px;
-grid-template-columns: auto;
+grid-template-columns: auto 1fr;
 grid-template-areas: 
   "header header header" "nav main more" "footer footer footer";
-display: flex;
-justify-content: center;
 }
 
 .header{
