--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ right: 0px;
 }
 
 .container1{
-margin: 1%;
 width: 750px;
 display: grid;
 grid-gap: 2px;
 grid-template-columns: auto 1fr;
 grid-template-areas: 
   "header header header" "nav main more" "footer footer footer";
+justify-content: center;
 }
 
 .header{
