--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ right: 0px;
 .leonleftpng{
 width: 300px;
 position: fixed;
-bottom: 0px;
-right: 100px;
+bottom: 75px;
+left: 0px;
 }
 
 .container1{
